<resources>
    <string name="app_name">Atlanta Street Art Project</string>
    <string name="not_a_member_register_now">Not a member? Register now</string>
    <string name="password">Password</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="username">Username</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="emailRegister">Email</string>
    <string name="passwordRegister">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="submit">Submit</string>
    <string name="chooseFile">Choose File</string>
    <string name="title_activity_base_drawer">BaseDrawerActivity</string>
    <string name="submitted_by">Submitted by:</string>
    <string name="get_started">Get Started</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">DONE</string>
    <string name="log_in">Already have an account? Log in</string>

    <string name="intro_1_title">Explore</string>
    <string name="intro_1_tag">Find street art around Atlanta.</string>

    <string name="intro_2_title">Submit</string>
    <string name="intro_2_tag">Upload photos of art that you find on your adventures.</string>

    <string name="intro_3_title">Tour</string>
    <string name="intro_3_tag">Take an urban hike and see street art around you.</string>

    <string name="play_again">Play Again</string>

    <string name="action_settings">Settings</string>

    <string name="permissions">Giving GPS and Read permissions
        is required to see distance from art</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string-array name="about">About</string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="clear">CLEAR</string>

    <string name="developerNames">Quinton Johnson, John Thomas, Alisha KC, Thomas Bridges, and Erik Maday</string>
</resources>
